# 3d_sketch_cad

./: .gitignore  CMakeLists.txt  readme.md
build-qt_occ_draw-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-qt_occ_draw-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-3839cfcf245dd2711581.json  cmakeFiles-v1-17ce0fb0a904263df74b.json  codemodel-v2-0288bd01b1aab0a84a16.json  index-2024-01-02T06-51-09-0152.json  target-cad-Debug-ea6945c8d75929c3cc17.json  target-cad_autogen-Debug-787b802594a21f573eee.json  target-cad_autogen_timestamp_deps-Debug-68e21f665392e45c9fd2.json
build-qt_occ_draw-Desktop-Debug/cad_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-qt_occ_draw-Desktop-Debug/cad_autogen/EWIEGA46WW/: moc_OcctQtViewer.cpp  moc_OcctQtViewer.cpp.d  moc_QtPropertyEditor.cpp  moc_QtPropertyEditor.cpp.d  moc_form.cpp  moc_form.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_qleftmenu.cpp  moc_qleftmenu.cpp.d  qrc_icons.cpp
build-qt_occ_draw-Desktop-Debug/cad_autogen/include/: ui_form.h  ui_mainwindow.h
libdxfrw/src/: drw_entities.h  libdxfrw.cpp
libdxfrwx/src/: drw_entities.cpp
oce-upstream-V7_5_0beta/: howto.txt
oce-upstream-V7_5_0beta/adm/: custom.sh
oce-upstream-V7_5_0beta/src/Graphic3d/: Graphic3d_CView.cxx
oce-upstream-V7_5_0beta/src/OpenGl/: OpenGl_View.cxx  OpenGl_View_Redraw.cxx
oce-upstream-V7_5_0beta/src/V3d/: V3d_View.cxx  V3d_View.hxx  V3d_Viewer.cxx
oce-upstream-V7_5_0beta/tests/v3d/glsl/: pbr_spheres  shading_models  texture_trsf2
qt_occ_draw/: CMakeLists.txt  OcctQtViewer.cpp  OcctQtViewer.h  QGCodeSyntaxHighlighter.cpp  draw_primitives.cpp  draw_primitives.h  draw_workflow.cpp  draw_workflow.h  examplewriter.cpp  examplewriter.h  form.cpp  form.h  form.ui  icons.qrc  libdxfrw_functions.cpp  libdxfrw_functions.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qleftmenu.cpp  qleftmenu.h  sketcher.cpp  sketcher.h
